Fix image center alignment in page

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body{
     justify-content: center;
     gap: 50px;
     margin-top: 100px;
+    
 }
 
 .scoreboard div{
@@ -38,16 +39,19 @@ body{
 #button-container{
     display:flex;
     justify-content: space-around;
-    flex: 0 0 auto;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    
 }
 
 #button-container input{
-    flex: 0 0 auto;
     width: 20%;
 }
 
 #output{
     margin-bottom: 100px;
+    
 }
 
 .end {
